# hermes-agent

./: .gitignore  CODEBASE_AUDIT_REPORT.md  Cargo.toml  cli.py  hermes_state_factory.py  hermes_state_rust.py  mcp_serve.py  run_agent.py
.beads/: issues.jsonl  metadata.json
.github/workflows/: tests.yml
acp_adapter/: session.py
agent/: anthropic_adapter.py  credential_pool.py  display.py
crates/hermes-acp/: Cargo.toml
crates/hermes-agent-core/: Cargo.toml
crates/hermes-agent-core/src/: budget.rs  compression.rs  compression_plan.rs  conversation_loop.rs  credentials.rs  lib.rs  message.rs  outcome.rs  provider.rs  provider_http.rs  provider_wire.rs  replay.rs  runtime.rs  runtime_state.rs  tool.rs
crates/hermes-agent-core/tests/: budget_compression_provider.rs  credentials.rs  provider_http.rs  provider_wire.rs  runtime.rs  runtime_state.rs  serde_roundtrip.rs
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: auth.rs  config_command.rs  display.rs  gateway_status.rs  integrations_status.rs  launcher.rs  lib.rs  logs.rs  plugins.rs  profile.rs  setup.rs  skills.rs
crates/hermes-config/: Cargo.toml
crates/hermes-dashboard/: Cargo.toml
crates/hermes-gateway/: Cargo.toml
crates/hermes-gateway/src/: lib.rs
crates/hermes-integrations/: Cargo.toml
crates/hermes-state/: Cargo.toml  README.md
crates/hermes-state/src/: lib.rs  ops.rs  schema.rs  search.rs  store.rs  title.rs
crates/hermes-state/tests/: daemon.rs
crates/hermes-tools/: Cargo.toml
crates/hermes-tui-gateway/: Cargo.toml
cron/: scheduler.py
docs/: slack_accounts.example.json
docs/plans/: 2026-04-08-multi-workspace-socket-mode.md
docs/rust-parity/: README.md  cutover.md  entrypoint-audit.md  full-parity-plan.md  integration-boundaries.md  izz1-production-boundary.md  status.yaml  tool-handler-boundaries.md
gateway/: mirror.py  run.py  session.py
hermes_cli/: goals.py  main.py  models.py  web_server.py
scripts/: bench_state.py  install.sh  rust_parity_status.py  rust_shadow_diff.py
tests/: test_tui_gateway_server.py
tests/gateway/: test_agent_cache.py  test_approve_deny_commands.py  test_signal.py  test_slack.py
tests/hermes_cli/: test_gateway_service.py  test_gateway_wsl.py  test_update_gateway_restart.py  test_update_yes_flag.py
tests/parity/: README.md  fixture_schema.py  (+6 more)
tools/: delegate_tool.py  file_tools.py
tui_gateway/: server.py
(+59 files in other folders)
