[package]
name = "hermes-agent-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Rust agent-core domain model for Hermes Agent"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
serde_json = "1.0"
