[package]
name = "hermes-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Rust CLI command registry and slash dispatch for Hermes Agent"
license = "MIT"

[dependencies]
hermes-agent-core = { path = "../hermes-agent-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
